--- a/appcode/HeriHomes/app/src/main/res/layout/activity_main.xml
+++ b/appcode/HeriHomes/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:src="@drawable/account"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.01"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/property"
         app:layout_constraintTop_toBottomOf="@+id/iV_dashboard" />
 
     <TextView
@@ -131,7 +131,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/property"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="32dp"
@@ -152,7 +152,7 @@
         android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/property" />
 
     <ImageView
         android:id="@+id/imageView6"
