--- a/appcode/HeriHomes/app/src/main/res/layout/activity_main.xml
+++ b/appcode/HeriHomes/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/iv_pay_schedule"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="32dp"
@@ -29,7 +29,7 @@
         android:src="@drawable/statement"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintStart_toEndOf="@+id/iv_pay_schedule"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <ImageView
@@ -38,7 +38,7 @@
         android:layout_height="55dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:src="@drawable/account"
@@ -111,7 +111,7 @@
         android:layout_height="55dp"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/payrent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iV_dashboard" />
@@ -134,7 +134,7 @@
         android:layout_height="55dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/buy"
         app:layout_constraintStart_toEndOf="@+id/iv_pay"
         app:layout_constraintTop_toBottomOf="@+id/iV_dashboard" />
@@ -186,7 +186,7 @@
         android:text="Payment Schedule"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_pay_schedule" />
 
     <TextView
         android:id="@+id/textView10"
@@ -211,6 +211,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
+
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
@@ -223,6 +224,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:orientation="vertical">
 
                 <ImageView
@@ -245,6 +248,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 android:textAlignment="center">
 
@@ -270,6 +274,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 android:textAlignment="center">
 
@@ -294,6 +299,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 android:textAlignment="center">
 
@@ -314,5 +320,10 @@
             </LinearLayout>
 
         </LinearLayout>
-    </android.support.design.widget.BottomNavigationView>
-</android.support.constraint.ConstraintLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_above="@+id/bottomNavigationView"
+            android:background="#666" />
+    </android.support.design.widget.BottomNavigationView></android.support.constraint.ConstraintLayout>
